--- a/index.html
+++ b/index.html
@@ -112,58 +112,55 @@
    <hr>
    <h2>Operating System</h2>
    <ul>
-        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/OS/os.txt">Operating System</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/OS/os.txt">Operating System</a></li>
     </ul>
     <h2>Networking</h2>
     <ul>
-        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/Network/network.txt">Networking</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Network/network.txt">Networking</a></li>
     </ul>
     <h2>Database</h2>
     <ul>
-        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/DB/db.txt">Database</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/DB/db.txt">Database</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/DB/sql_notes.sql">SQL Notes</a></li>
     </ul>
     <h2>Data Science</h2>
     <ul>
-        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/Data%20Science/Machine%20Learning/Machine%20Learning%20Concept.txt#L1-L40">Feature Engineering</a></li>
-        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/Data%20Science/Machine%20Learning/Machine%20Learning%20Concept.txt#L43-L102">Statistics/Training Tips</a></li>
-        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/Data%20Science/Machine%20Learning/Machine%20Learning%20Concept.txt#L105-L144">Models</a></li>
-        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/Data%20Science/Machine%20Learning/Machine%20Learning%20Concept.txt#L147-L172">Evaluations</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Data%20Science/Machine%20Learning/Machine%20Learning%20Concept.txt#L1-L40">Feature Engineering</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Data%20Science/Machine%20Learning/Machine%20Learning%20Concept.txt#L43-L102">Statistics/Training Tips</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Data%20Science/Machine%20Learning/Machine%20Learning%20Concept.txt#L105-L144">Models</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Data%20Science/Machine%20Learning/Machine%20Learning%20Concept.txt#L147-L172">Evaluations</a></li>
     </ul>
     <h2>DevOps</h2>
     <ul>
-        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/DevOps/devops.txt#L1-L107">Overview(Kubernate/Ansible/AWS Networking/Monitoring)</a></li>
-        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/DevOps/devops.txt#L109-L188">Service Protocol</a></li>
-        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/DevOps/devops.txt#L190-L272">Security</a></li>
-        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/DevOps/AWS/AWS%20Certified%20Cloud%20-%20Practitioner%20Course/highlight.txt">AWS Overview</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/DevOps/devops.txt#L8-L70">DevOps Overview</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/DevOps/devops.txt#L72-L117">Linux Overview</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/DevOps/devops.txt#L119-L156">Git Overview</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/DevOps/devops.txt#L158-L188">CI/CD Overview</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/DevOps/devops.txt#L190-L301">AWS Overview</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/DevOps/devops.txt#L308-L343">Docker Overview</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/DevOps/devops.txt#L345-L372">Security Overview</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/DevOps/devops.txt#L374-L388">Kafka Overview</a></li>
     </ul>
     <h2>Test</h2>
     <ul>
-        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/Test/Test%20Concept.txt#L299-L315">Overall Process For Development</a></li>
-        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/Test/Test%20Concept.txt#L182-L196">Stub/Mock/Fake</a></li>
-        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/Test/Test%20Concept.txt#L212-L257">Refactoring</a></li>
-        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/Test/Test%20Concept.txt#L129-L137">Unit Test</a></li>
-        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/Test/Test%20Concept.txt#L197-L211">Integration Test</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Test/Test%20Concept.txt#L299-L315">Overall Process For Development</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Test/Test%20Concept.txt#L182-L196">Stub/Mock/Fake</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Test/Test%20Concept.txt#L212-L257">Refactoring</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Test/Test%20Concept.txt#L129-L137">Unit Test</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Test/Test%20Concept.txt#L197-L211">Integration Test</a></li>
     </ul>
     <h2>OOP</h2>
     <ul>
-        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/OOP/SOLID.txt">SOLID</a></li>
-        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/OOP/OOP.txt">Overview(with Interview Tips)</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/OOP/SOLID.txt">SOLID</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/OOP/OOP.txt">Overview with Interview Tips</a></li>
     </ul>
     <h2>System Design</h2>
     <ul>
         <li>Overview</li>
         <ul>
-            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/System%20Design/Mastering%20the%20System%20Design%20Interview/notes.txt">Components</a></li>
-            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Before%20Interview/System%20Design.txt#L1-L95">Interview Framework</a></li>
-        </ul>
-        <li>Use Cases</li>
-        <ul>
-            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Before%20Interview/System%20Design.txt#L98-L99">Hot Spot Problem</a></li>
-            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Before%20Interview/System%20Design.txt#L100-L120">E-Commerce Problem</a></li>
-            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Before%20Interview/System%20Design.txt#L121-L171">Social Media Problem</a></li>
-            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Before%20Interview/System%20Design.txt#L172-L207">Taxi Application Problem</a></li>
-            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Before%20Interview/System%20Design.txt#L208-L252">Chat Application Problem</a></li>
-            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Before%20Interview/System%20Design.txt#L253-L261">Stock Exchange Problem</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/System%20Design/Mastering%20the%20System%20Design%20Interview/notes.txt">Components</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/System%20Design/notes.txt">Interview Framework</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Interview/System%20Design/practices">Use Cases</a></li>
         </ul>
      </ul>
 
@@ -174,22 +171,9 @@
      <ul>
         <li>Cheeting Sheet</li>
         <ul>
-            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Before%20Interview/Algorithm.txt">Cheeting Sheet</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Algorithm/notes.txt">Cheeting Sheet</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Algorithm/notes.txt">Different Algorithm</a></li>
        </ul>
-       <li>Overview</li>
-       <ul>
-           <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Algorithm/notes.txt#L31-L93">Sliding Window</a></li>
-           <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Algorithm/notes.txt#L96-L167">Dynamic Programming</a></li>
-           <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Algorithm/notes.txt#L187-L211">Stack/Queue</a></li>
-           <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Algorithm/notes.txt#L335-L346">Game Theory</a></li>
-           <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Algorithm/notes.txt#L349-L383">Arithmetic Expression</a></li>
-           <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Algorithm/notes.txt#L225-L290">Common Array Problems</a></li>
-           <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Algorithm/notes.txt#L294-L332">Common Graph/Tree Problems</a></li>
-      </ul>
-      <li>Coding Examples</li>
-      <ul>
-          <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Algorithm/Basic">Examples</a></li>
-     </ul>
      </ul>
 
      <br>
