--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
     <ul>
         <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/OOP/SOLID.txt">SOLID</a></li>
         <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/OOP/OOP.txt">Overview with Interview Tips</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Interview/OOP/practice">Use Cases</a></li>
     </ul>
     <h2>System Design</h2>
     <ul>
