--- a/index.html
+++ b/index.html
@@ -108,6 +108,30 @@
    </ul>
 
    <br>
+
+   <h1>Frontend</h1>
+   <hr>
+   <h2>React</h2>
+   <ul>
+      <li>Basic Components/Props Practice</li>
+      <ul>
+          <li><a target="_blank" href="https://danniefairy.github.io/React-Profile/">Personal Profile</a></li>
+          <li><a target="_blank" href="https://github.com/danniefairy/React-Profile">Personal Profile Code</a></li>
+      </ul>
+      <li>Advance useState/useRef/useEffect</li>
+      <ul>
+          <li><a target="_blank" href="http://127.0.0.1:3000/">Globe Frontend</a></li>
+          <li><a target="_blank" href="https://github.com/danniefairy/Globe-Frontend">Globe Frontend Code</a></li>
+          <ul>
+            <li>useState: refresh the page when update the state(change year)</li>
+            <li>useRef: not refresh the page when update the ref(globe action)</li>
+            <li>useEffect: triggered when state/ref is updated(update objects on globe, show images)</li>
+            <li><a target="_blank" href="https://medium.com/hannah-lin/react-hook-%E7%AD%86%E8%A8%98-%E5%BE%9E%E6%9C%80%E5%9F%BA%E6%9C%AC%E7%9A%84-hook-%E9%96%8B%E5%A7%8B-usestate-useeffect-fee6582d8725">reference</a></li>
+        </ul>
+      </ul>
+  </ul>
+  <br>
+
    <h1>Foundamental Knowledge</h1>
    <hr>
    <h2>Operating System</h2>
