--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <p>For the notes of my work, those will de stored in On-Premise storage</p>
 
       <br>
+      <h1>Dev Styles</h1>
+        <a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Dev%20Styles">Examples</a>
       <h1>Programming Language</h1>
       <hr>
       <h2>Golang</h2>
