--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 
      <h2>Python</h2>
      <ul>
+        <li>Basic Concept</li>
+        <ul>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Languages/Python.txt">Interview Highlight</a></li>
+        </ul>
         <li>Example Code</li>
         <ul>
             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/PYTHON/oop">OOP</a></li>
@@ -65,7 +69,6 @@
             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/PYTHON/Test">Unit/Functional Test</a></li>
             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/PYTHON/flask">Flask</a></li>
             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/PYTHON/subprocess">Subprocess</a></li>
-            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Languages/Python.txt">Interview Highlight</a></li>
         </ul>
     </ul>
 
