--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
      <br>
      <h1>Development SOP</h1>
      <hr>
-     <h2>1. Product Requirement Document</h2>
-     <h2>2. Design Details</h2>
+     <h3>1. <a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Development%20SOP/Product%20Requirement%20Document.md">Product Requirement Document</a></h3>
+     <h3>2. <a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Development%20SOP/Design%20Details.md">Design Details</a></h3>
    </body>
 </html>
