--- a/index.html
+++ b/index.html
@@ -228,5 +228,6 @@
      <hr>
      <h3>1. <a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Development%20SOP/Product%20Requirement%20Document.md">Product Requirement Document</a></h3>
      <h3>2. <a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Development%20SOP/Design%20Details.md">Design Details</a></h3>
+     <h3><a target="_blank" href="https://drive.google.com/drive/folders/10wU9F1zV-vD-C2AkUMAL9Hg35lgBCErk?usp=drive_link">Example</a></h3>
    </body>
 </html>
